# MESADiseaseSpread

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
disease_spread/: __init__.py  app.py  model.py
scripts/: run.py
virusx/: agents.py  app.py  model.py
