[project]
name = "disease-spread"
version = "0.1.0"
description = ""
authors = [
    {name = "mvishiu11",email = "jakubmuszynski2103@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mesa[rec] (>=3.1.5,<4.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
mesa = "^3.1.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
